--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "typescript": "^5"
   },
   "lint-staged": {
-    "*.{cjs,md,mjs,js,jsx,ts,tsx}": [
-      "prettier --write"]	  
+    "*.{cjs,md,mjs,js,json,jsx,ts,tsx}": [
+      "prettier --write"
+    ]
   },
   "pre-commit": [
-	  "tsc",
+    "tsc",
     "lint-staged",
     "lint"
   ]
