--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "lint-staged": "lint-staged",
     "start": "next start",
-    "test": "node --test --no-warnings=ExperimentalWarning --loader ts-node/esm **/*_test.ts",
+    "test": "vitest run",
+    "test_watch": "vitest",
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
@@ -29,8 +30,8 @@
     "pre-commit": "^1.2.2",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.6.0"
   },
   "lint-staged": {
     "*.{cjs,md,mjs,js,json,jsx,ts,tsx}": [
@@ -40,6 +41,7 @@
   "pre-commit": [
     "tsc",
     "lint-staged",
-    "lint"
+    "lint",
+    "test"
   ]
 }
