--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "build": "next build",
     "lint": "next lint",
     "lint-staged": "lint-staged",
+    "local_api": "node local_api.js",
     "start": "next start",
     "test": "vitest run",
     "test_watch": "vitest",
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522"
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "read-file-utf8": "^3.0.0",
+    "write-file-utf8": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
