--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "json-server": "json-server --port 4000 db.json",
     "lint": "next lint",
     "lint-staged": "lint-staged",
     "start": "next start",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-rc.0",
+    "json-server": "^1.0.0-beta.0",
     "lint-staged": "^15.2.4",
     "postcss": "^8",
     "pre-commit": "^1.2.2",
